# MU-UFG

./: README.md  pyproject.toml
notebooks/: Instrument_Classifier-wav2vec-Copy1 (1).ipynb  Instrument_Classifier-wav2vec-Mixagem_IRMAS.ipynb  Instrument_Classifier-wav2vec-Mixagem_IRMAS_Instrument_UFG.ipynb  Instrument_Classifier-wav2vec-all.ipynb  MIXup_all_balanced.ipynb  Mixagem.ipynb
