[tool.poetry]
name = "mu-ufg"
version = "0.1.0"
description = ""
authors = ["Francieli Moreira <francielimoreira@discente.ufg.br>, Jonas Júnior <jonasjunior@discente.ufg.br>, Matheus Brakes <brakes_fares@discente.ufg.br>, Victor Pimenta <victorguerreiro@discente.ufg.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.8"
bitsandbytes = "^0.42.0"
transformers = "4.36.2"
peft = "^0.7.1"
accelerate = "^0.26.1"
datasets = "^2.16.1"
jupyterlab = "^4.0.11"
sentencepiece = "^0.1.99"
protobuf = "^4.25.2"
packaging = "^23.2"
torchscale = "^0.3.0"
xformers = "^0.0.23.post1"
pypdf2 = "^3.0.1"
tts = "^0.22.0"
gdown = "^5.1.0"
deepspeed = "0.10.3"
pydantic = "1.9"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
